--- a/src/components/Chat/ChatWidget/styles.module.css
+++ b/src/components/Chat/ChatWidget/styles.module.css
@@ -1,75 +1,65 @@
+.Scroll {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scroll-snap-type: none;
+}
+
 .ContentSending {
   height: auto;
   padding: 12px;
   display: flex;
-  justify-content: flex-start;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: flex-end;
 }
 
 .ContentSender {
   height: auto;
   padding: 12px;
   display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: flex-start;
 }
 
 .MsgSending {
-  height: auto;
-  width: auto;
-  height: min-content(40px);
-  width: min-content(120px);
-  background-color: #fdba74;
-  border-radius: 10px;
-  color: #f4f5f9;
+  height: 40px;
+  width: 160px;
+  background-color: #DF479A;
+  border-radius: 6px;
+  margin: 6px 0;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  margin: 1rem 0;
-  padding: 1rem;
+  justify-content: center;
   font-weight: 500;
   overflow-wrap: break-word;
 }
 
 .MsgSender {
-  height: auto;
-  width: auto;
-  height: min-content(40px);
-  width: min-content(120px);
-  background-color: #2563eb;
-  border-radius: 10px;
-  color: #f4f5f9;
+  height: 40px;
+  width: 160px;
+  background-color: #70C8DD;
+  border-radius: 6px;
+  margin: 6px 0;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  margin: 4px 0;
-  padding: 4px;
+  justify-content: center;
   font-weight: 500;
   overflow-wrap: break-word;
 }
 
 .MsgContentSending {
   height: auto;
-  padding: 12px;
-  margin-top: 8px;
+  width: auto;
+  margin-top: 6px;
   justify-content: flex-start;
-  margin-left: 12px;
 }
 
 .MsgContentSender {
   height: auto;
-  padding: 12px;
-  margin-top: 8px;
+  width: auto;
+  margin-top: 6px;
   justify-content: flex-end;
-  margin-right: 1.2rem;
-}
-
-.btn {
-  display: flex;
-  flex-basis: 20%;
-  justify-content: center;
-  outline: none;
-  color: #f4f5f9;
-  font-weight: bold;
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-  background-color: #4f46e5;
 }
