--- a/src/components/Chat/ChatWidget/styles.module.css
+++ b/src/components/Chat/ChatWidget/styles.module.css
@@ -1,7 +1,6 @@
 .Scroll {
   width: 100%;
-  height: 100%;
-  overflow-y: scroll;
+  height: 500px;
   overflow-x: hidden;
   scroll-snap-type: none;
 }
